--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,9 +11,10 @@
   </head>
 
   <body>
-    <div id="title">
+    <header id="title">
       <h1>Viewing Party</h1>
-    </div>
+    </header>
+    
     <%= render partial: 'shared/navigation' %>
     <%= yield %>
   </body>
