--- a/app/views/movies/discover.html.erb
+++ b/app/views/movies/discover.html.erb
@@ -3,7 +3,7 @@
 </div>
 
 <div id="search-movies">
-  <%= form_with url: "/movies/search", method: :get, local: true do |form| %>
+  <%= form_with url: "/users/#{@user.id}/movies", method: :get, local: true do |form| %>
     <%= form.label :search %>
     <%= form.text_field :search %>
     <%= form.submit "Find Movies" %>
