--- a/app/views/users/discover/index.html.erb
+++ b/app/views/users/discover/index.html.erb
@@ -1,1 +1,11 @@
-Tsting
+<h2>Discover Movies</h2>
+<div id='find-movies-button'>
+  <%= button_to 'Find Top Rated Movies', user_movies_path(@user, q: 'top%20rated') , method: :get%>
+</div>
+<br>
+<div id='movie-search'>
+  <%= form_with(url: user_movies_path(@user), method: :get, params: { q: params[:q] }) do |form| %>
+    <%= form.text_field :search %> 
+    <%= form.submit "Find Movies" %>
+  <% end %>
+</div>
