--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -5,10 +5,10 @@
 </div>
 
 <div id="existing-users">
-<h2>Existing Users</h2>
-  <ul>
-    <% @users.each do |user| %>
-      <li><%= user.email %></li>
-    <% end %>
-  </ul>
+  <h2>Existing Users</h2>
+    <ul>
+      <% @users.each do |user| %>
+        <li> <%= link_to "#{user.email}", user_path(user.id) %></li>
+      <% end %>
+    </ul>
 </div>
