--- a/app/views/users/discover/index.html.erb
+++ b/app/views/users/discover/index.html.erb
@@ -4,7 +4,7 @@
 </div>
 <br>
 <div id='movie-search'>
-  <%= form_with(url: user_movies_path(@user), method: :get, params: { q: params[:q] }) do |form| %>
+  <%= form_with(url: user_movies_path(@user, q: 'keyword'), method: :get) do |form| %>
     <%= form.text_field :search %> 
     <%= form.submit "Find Movies" %>
   <% end %>
