--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,1 +1,4 @@
 <h3><%= @user.name %>'s Dashboard</h3>
+<% form_with url: discover_movies_path, method: :get , local: true do |form| %>
+  <%= form.submit 'Discover Movies' %>
+<% end %>
