--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -3,5 +3,5 @@
 <% end %>
 <h2>Existing Users</h2>
 <% @users.each do |user|%>
-<%= link_to "#{user.email}", user_path(user) %><br>
+<%= link_to "#{user.email}", user_dashboard_path(user) %><br>
 <% end %>
