feat: Add missing show page with new service

--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -1,10 +1,10 @@
 <ol type="1">
-<% @facade.movies.each do |movie| %>
+<% @movies.each do |movie| %>
 <div id="movie-<%=movie.id%>">
-  <h4><li><%= movie.title %></li></h4>
+  <h4><li><%= link_to "#{movie.title}", user_movie_path(@user, movie.id), method: :get %></li></h4>
   <li><%=movie.vote_average%></li>
 </div>
 <% end %>
 </ol>
 
-<%= button_to "Return to Discover", user_discover_path(@user), method: :get %>
+<%= button_to "Return to Discover", user_discover_index_path(@user), method: :get %>
