reafactor to add facades

--- a/app/views/users/discover/index.html.erb
+++ b/app/views/users/discover/index.html.erb
@@ -1,11 +1,11 @@
 <h2>Discover Movies</h2>
 <div id='find-movies-button'>
-  <%= button_to 'Find Top Rated Movies', user_movies_path(@user, q: 'top%20rated') , method: :get%>
+  <%= button_to 'Find Top Rated Movies', user_movies_path(@user) , method: :get%>
 </div>
 <br>
 <div id='movie-search'>
-  <%= form_with(url: user_movies_path(@user, q: 'keyword'), method: :get) do |form| %>
-    <%= form.text_field :search %> 
-    <%= form.submit "Find Movies" %>
+    <%= form_with url: user_movies_path(@user), local: true, method: :get do |form|%>
+    <%= form.text_field :movie_title %>
+    <%= form.submit 'Find Movies' %>
   <% end %>
 </div>
