--- a/app/views/users/movies/index.html.erb
+++ b/app/views/users/movies/index.html.erb
@@ -1,9 +1,5 @@
-<%= button_to "Discover", user_discover_path(@user) , method: :get%>
-
-<div id="movies">
-  <% @movies.each do |movie| %>
-    <ul>
-      <li> <%= movie.title %> -- Vote Average: <%= movie.vote_average %> </li>
-    </ul>
-  <% end %>
-</div>
+<% if @facade.status == "search" %>
+  <%=render partial: "search", locals: {facade: @facade}%>
+<% elsif @facade.status == "top_20" %>
+  <%=render partial: "top_20", locals: {facade: @facade}%>
+<% end %>
