Fix: change from resource to resources in routes

--- a/app/views/landing/index.html.erb
+++ b/app/views/landing/index.html.erb
@@ -6,7 +6,7 @@
   <h2>Existing Users</h2>
   <% @users.each do |user| %>
     <ul>
-      <li><%= link_to user.email, users_path(user) %></li>
+      <li><%= link_to user.email, user_path(user) %></li>
     </ul>
   <% end %>
 </div>
