--- a/app/views/users/movies/_top_20.html.erb
+++ b/app/views/users/movies/_top_20.html.erb
@@ -2,6 +2,6 @@
 <%=button_to "Return to Discover Page", user_discover_path(@user), method: :get%>
 <%facade.top_20.each do |movie|%>
   <div id="movie-<%=movie.id%>">
-    <p><%=movie.title%>Vote Average: <%=movie.vote_average%></p>
+    <p><%=link_to movie.title, user_movie_path(@user, movie.id)%>Vote Average: <%=movie.vote_average%></p>
   </div>
 <%end%>
