--- a/app/views/users/discover/index.html.erb
+++ b/app/views/users/discover/index.html.erb
@@ -4,7 +4,7 @@
 <%= button_to 'Discover Top Rated Movies', user_movies_path(@user), method: :get %>
 <br><br>
 <%= form_with url: user_movies_path(@user), method: :get, local: true do |f| %>
-  <%= f.label :q %>
+  <%= f.label :q, hidden: true %>
   <%= f.text_field :q %>
   <%= f.submit 'Search' %>
 <% end %>
