--- a/app/views/users/movies/_search.html.erb
+++ b/app/views/users/movies/_search.html.erb
@@ -2,6 +2,6 @@
 <%=button_to "Return to Discover Page", user_discover_path(@user), method: :get%>
 <%facade.search_results.each do |movie|%>
   <div id="movie-<%=movie.id%>">
-    <p><%=movie.title%> Vote Average: <%=movie.vote_average%></p>
+    <p><%=link_to movie.title, user_movie_path(@user, movie.id)%> Vote Average: <%=movie.vote_average%></p>
   </div>
 <%end%>
