--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -7,6 +7,6 @@
 <div id="existing-users">
   <h2>Existing Users</h2>
   <% @users.each do |user| %>
-    <p><%= link_to "#{user.name}", "/users/#{user.id}" %></p>
+    <p><%= link_to "#{user.name}", user_path(user)  %></p>
   <% end %>
 </div>
