feat: add views and controller methods for Discover Movies Page

--- a/app/views/users/discover/index.html.erb
+++ b/app/views/users/discover/index.html.erb
@@ -1,3 +1,15 @@
 <h1>Viewing Party</h1>
 <br>
-<h2>Discover Movies</h2>
+<h2>Discover Movies Page</h2>
+  <div id="top-rated">
+    <%= button_to 'Discover Top Rated Movies', user_movie_index_path(@user), method: :get %>
+  </div>
+
+  <div id="search-movie">
+    <%= form_with url: user_movie_index_path(@user), method: :get do |f| %>
+      <%= f.label :search, "Enter Movie Title:" %>
+      <%= f.text_field :search %>
+      <%= f.submit "Search" %>
+    <% end %>
+  </div>
+<br>
