--- a/app/views/users/movies/_search.html.erb
+++ b/app/views/users/movies/_search.html.erb
@@ -1,5 +1,5 @@
 <h1>Movie Search Results</h2>
-<%=button_to "Return to Discover Page", user_discover_path(@user), method: :get%>
+<%=button_to "Discover Page", user_discover_path(@user), method: :get%>
 
 <div id="movies">
   <%facade.search_results.each do |movie|%>
