--- a/app/views/users/movies/_top_20.html.erb
+++ b/app/views/users/movies/_top_20.html.erb
@@ -1,5 +1,5 @@
 <h1>Top Rated Movies</h2>
-<%=button_to "Return to Discover Page", user_discover_path(@user), method: :get%>
+<%=button_to "Discover Page", user_discover_path(@user), method: :get%>
 <div id="movies">
   <%facade.top_20.each do |movie|%>
     <div id="movie-<%=movie.id%>">
