Feat: add form for new user, update for flash alerts, minor adjustments to landing page

--- a/app/views/landing/index.html.erb
+++ b/app/views/landing/index.html.erb
@@ -1,5 +1,5 @@
 <div id="new-user">
-  <%= button_to "Create User", register_path %>
+  <%= link_to "Create User", register_path, method: :get, local: true %>
 </div>
 
 <div id="existing-users">
