--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,6 +13,13 @@
   <body>
     <%= link_to 'Home', root_path %>
     <h1>Viewing Party</h1>
+
+    <% flash.each do |type, msg| %>
+      <div>
+        <%= msg %>
+      </div>
+    <% end %>
+    
     <%= yield %>
   </body>
 </html>
