--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -1,11 +1,13 @@
 <%= button_to "Discover Page", "/users/#{@user.id}/discover", method: :get %>
 <br>
 <div id="results">
-  <% @movies.each do |movie| %>
-    <div id="movie-<%=movie.id%>">
-      <%= link_to movie.title.to_s, user_movie_path(@user.id, movie.id) %>
-      Vote Average: <%= movie.vote_average %>
-      <br>
-    </div>
+  <% if @movies %>
+    <% @movies.each do |movie| %>
+      <div id="movie-<%=movie.id%>">
+        <%= link_to movie.title.to_s, user_movie_path(@user.id, movie.id) %>
+        Vote Average: <%= movie.vote_average %>
+        <br>
+      </div>
+    <% end %>
   <% end %>
 </div>
