--- a/app/views/movies/discover.html.erb
+++ b/app/views/movies/discover.html.erb
@@ -1,5 +1,5 @@
 <div id="top-movies">
-  <%= button_to "Find Top Rated Movies", "/users/#{@user.id}/movies", method: :get %>
+  <%= button_to "Find Top Rated Movies", "/users/#{@user.id}/movies", method: :get, params: {q: "top20rated"} %>
 </div>
 <br>
 <div id="search-movies">
