--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,6 +1,6 @@
-<h3><%= @user.name %>'s Dashboard</h3>
+<h3><%= @user.user_name %>'s Dashboard</h3>
 
-<%= button_to "Discover Movies", user_discover_index %>
+<%= button_to "Discover Movies", user_discover_index_path(@user), method: 'get' %>
 
 <section class='party-list'>
 
