--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -1,3 +1,16 @@
+<div id="return-to-discover">
+  <%= button_to "Discover Page", "/users/#{@user.id}/discover", method: :get %>
+</div>
+<br>
 <div id="create-vp">
   <%= button_to "Create Viewing Party for #{@movie.title}", new_user_movie_party_path(@user.id, @movie.id), method: :get %>
+</div>
+
+<div id="movie-info">
+  <h5>Summary</h5>
+  Title: <%= @movie.title %>
+  Vote Average: <%= @movie.vote_average %>
+  Runtime: <%= @movie.runtime %>
+  Genres: <%= @movie.genres.each{|genre| genre}  %>
+  Summary: <%= @movie.overview %>
 </div>
