--- a/app/views/users/discover/index.html.erb
+++ b/app/views/users/discover/index.html.erb
@@ -1,6 +1,6 @@
 <h2>Discover Movies</h2>
 <div id='find-movies-button'>
-  <%= button_to 'Find Top Rated Movies', user_movies_path(@user) , method: :get%>
+  <%= button_to 'Find Top Rated Movies', user_movies_path(@user, {q: "top rated"}), method: :get %>
 </div>
 <br>
 <div id='movie-search'>
