--- a/app/views/users/movies/_top_20.html.erb
+++ b/app/views/users/movies/_top_20.html.erb
@@ -1,10 +1,15 @@
 <h1>Top Rated Movies</h2>
 <%=button_to "Discover Page", user_discover_path(@user), method: :get%>
+<br>
 <div id="movies">
   <%facade.top_20.each do |movie|%>
     <div id="movie-<%=movie.id%>">
-      <p><%=link_to movie.title, user_movie_path(@user, movie.id)%>Vote Average: <%=movie.vote_average%></p>
+      <div style="display: flex; justify-content: space-between;">
+      <span style="text-align: left; padding-left:3%;"><%= link_to movie.title, user_movie_path(@user, movie.id) %></span>
+      <span style="text-align: right; padding-right:50%;">Vote Average: <%= movie.vote_average %></span>
+      </div>
     </div>
+    <br>
   <%end%>
 </div>
 
