--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -7,17 +7,21 @@
 <div id="user-viewing-parties">
   <ul>
   <% @hosted_parties.each do |vp| %>
-    <li><img width="150px" src=<%="https://image.tmdb.org/t/p/original#{vp.poster(vp.movie_id)}" %>></li>
-    <li><%= vp.date %></li>
-    <li><%= vp.start_time %></li>
+    <img width="150px" src=<%="https://image.tmdb.org/t/p/original#{vp.poster(vp.movie_id)}" %>>
+    <li><%= vp.title(vp.movie_id) %></li>
+    <li><%= vp.date.strftime("%B %-d, %Y") %></li>
+    <li><%= vp.start_time.strftime("%-I:%M %p") %></li>
     <li>Hosting</li>
+    <br><br>
     <% end %>
 
 <% @invited_parties.each do |vp| %>
-    <li><img width="150px" src=<%="https://image.tmdb.org/t/p/original#{vp.poster(vp.movie_id)}" %>></li>
-    <li><%= vp.date %></li>
-    <li><%= vp.start_time %></li>
+    <img width="150px" src=<%="https://image.tmdb.org/t/p/original#{vp.poster(vp.movie_id)}" %>>
+    <li><%= vp.title(vp.movie_id) %></li>
+    <li><%= vp.date.strftime("%B %-d, %Y") %></li>
+    <li><%= vp.start_time.strftime("%-I:%M %p") %></li>
     <li>Invited</li>
+    <br><br>
     <% end %>
 
   <ul>
