--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -7,6 +7,6 @@
 <ul id="viewing-parties">
   <h3> Viewing Parties </h3>
   <% @parties.each do |party| %>
-    <li><%= party.movie_title %>%</li>
+    <li><%= party.movie_title %></li>
   <% end %>
 </ul>
