refactor: update movie index and show views to use new facade variable and account for refactored design pattern and attribute methods
Co-authored-by: Thomas Hawley <120520954+thawley2@users.noreply.github.com>

--- a/app/views/users/movies/show.html.erb
+++ b/app/views/users/movies/show.html.erb
@@ -1,29 +1,29 @@
-<h2><%= @movie.title %></h2>
+<h2><%= @facade.movie_title %></h2>
 
 <%= button_to 'Discover Page', user_discover_path(@user.id), method: :get  %>
-<%= button_to 'Create Viewing Party', new_user_movie_viewing_party_path(@user.id, @movie.id), method: :get  %>
+<%= button_to 'Create Viewing Party', new_user_movie_viewing_party_path(@user, @facade.movie_id), method: :get  %>
 
-<p>Vote Average: <%= @movie.vote_average %></p>
-<p>Runtime: <%= format_runtime(@movie.runtime) %></p>
-<p>Genre: <%= format_genres(@movie.genres) %></p>
+<p>Vote Average: <%= @facade.movie_vote_average %></p>
+<p>Runtime: <%= format_runtime(@facade.movie_runtime) %></p>
+<p>Genre: <%= format_genres(@facade.movie_genres) %></p>
 
 <h3>Summary:</h3>
-<p><%= @movie.summary %></p>
+<p><%= @facade.movie_summary %></p>
 
 <h3>Cast:</h3>
 
-<% @movie.cast.each do |cast_member| %>
+<% @facade.cast.each do |cast_member| %>
   <div class="cast">
-    <p>Character: <%= cast_member[:character] %></p>
-    <p>Actor: <%= cast_member[:name] %></p>
+    <p>Character: <%= cast_member.character %></p>
+    <p>Actor: <%= cast_member.name %></p>
   </div>
   <br>
 <% end %>
 
-<h3><%= count_reviews(@movie.reviews) %> Reviews</h3>
+<h3><%= count_reviews(@facade.reviews) %> Reviews</h3>
 
-<% @movie.reviews.each do |review| %>
-  <p>Author: <%= review[:author] %></p>
-  <p>Review: <%= review[:content] %></p>
+<% @facade.reviews.each do |review| %>
+  <p>Author: <%= review.author %></p>
+  <p>Review: <%= review.content %></p>
   <br>
 <% end %>
