--- a/app/views/users/movies/index.html.erb
+++ b/app/views/users/movies/index.html.erb
@@ -2,10 +2,10 @@
 
 <%= button_to 'Discover Page', user_discover_path(@user), method: :get %>
 
-<% @movies.each do |movie| %>
+<% @facade.movies.each do |movie| %>
 <ul>
   <li id="movie_<%= movie.id %>">
-    <%= link_to movie.title, user_movie_path(@user, movie.id) %> 
+    <%= link_to movie.title, user_movie_path(@user, movie.id) %>
     Vote Average: <%= movie.vote_average %>
   </li>
 </ul>
