--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -18,7 +18,8 @@
 <div id="cast-members">
   <h5>Cast</h5>
   <% @facade.cast_members(@movie.id).each do |member| %>
-    <%= member %>
+    <%= member.character %>
+    <%= member.actor %><br>
   <% end %>
 </div>
 
