test: add missing tests

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -7,7 +7,7 @@
 <div id="user-viewing-parties">
   <ul>
   <% @hosted_parties.each do |vp| %>
-    <img width="150px" src=<%="https://image.tmdb.org/t/p/original#{vp.poster(vp.movie_id)}" %>>
+    <img id="image" width="150px" src=<%="https://image.tmdb.org/t/p/original#{vp.poster(vp.movie_id)}" %>>
     <li><%= link_to vp.title(vp.movie_id), user_movie_path(@user, vp.movie_id) %></li>
     <li><%= vp.date.strftime("%B %-d, %Y") %></li>
     <li><%= vp.start_time.strftime("%-I:%M %p") %></li>
@@ -17,7 +17,7 @@
     <% end %>
 
 <% @invited_parties.each do |vp| %>
-    <img width="150px" src=<%="https://image.tmdb.org/t/p/original#{vp.poster(vp.movie_id)}" %>>
+    <img id="image" width="150px" src=<%="https://image.tmdb.org/t/p/original#{vp.poster(vp.movie_id)}" %>>
     <li><%= link_to vp.title(vp.movie_id), user_movie_path(@user, vp.movie_id)  %></li>
     <li><%= vp.date.strftime("%B %-d, %Y") %></li>
     <li><%= vp.start_time.strftime("%-I:%M %p") %></li>
@@ -26,6 +26,6 @@
     <br><br>
     <% end %>
 
-  <ul>
+  </ul>
 </div>
 
