--- a/app/views/discover/users/show.html.erb
+++ b/app/views/discover/users/show.html.erb
@@ -1,3 +1,9 @@
 <h1>Discover Users Show Page</h1>
 
-<%= button_to "Discover Top Rated Movies", "/movies", method: :get %>
+<%= button_to "Discover Top Rated Movies", "/movies", method: :get %><br>
+
+<%= form_with url: "/movies", method: :get, local: true do |form| %>
+  <%= form.label :search %>
+  <%= form.text_field :search, :required => true %>
+  <%= form.submit 'Search Movie' %>
+<% end %>
