--- a/app/views/users/movies/index.html.erb
+++ b/app/views/users/movies/index.html.erb
@@ -1,6 +1,11 @@
 <h1>Viewing Party</h1>
 <br>
 <h2>Movies Results Page</h2>
+<br>
+<div id="discover-button">
+  <%= button_to 'Back to Discover', user_discover_index_path(@user), method: :get %>
+</div>
+<br>
 <% @top_rated.each.with_index(1) do |movie, i| %>
 
   <div id="movie-<%= i %>">
