--- a/app/views/parties/new.html.erb
+++ b/app/views/parties/new.html.erb
@@ -1,6 +1,12 @@
 <h2>Viewing Party Details </h2>
 <h3><%= @movie.title %></h3>
-<%= form_with url: user_movie_parties(@user, @movie.id), method: :post, local: true do |form| %>
-<%= form.label :duration, "Duration of Party", value: @movie.duration %>
-<%= form.number_field :duration %>
-<%= form.label :day, "Day" %>
+<%= form_with url: user_movie_parties_path(@user, @movie.id), method: :post, local: true do |form| %>
+  <%= form.label :duration, "Duration of Party", value: @movie.runtime %>
+  <%= form.number_field :duration %>
+  <%= form.label :day, "Day" %>
+  <%= form.date_select :day %>
+  <%= form.label :time, "Start Time" %>
+  <%= form.time_select :time %><br/>
+  <%= form.check_boxes :id, User.all, :name, :email %>
+  <%= form.submit "Create Party" %>
+<% end %>
