--- a/app/views/users/movies/show.html.erb
+++ b/app/views/users/movies/show.html.erb
@@ -1,3 +1,12 @@
 <h1>Viewing Party</h1>
 <br>
 <h2>Movie Details Page</h2>
+<br>
+<div id="create-party">
+  <%= button_to "Create Viewing Party for Movie", new_user_movie_viewing_party_path(@user.id, @movie.id), method: :get %>
+</div>
+<br>
+<div id="discover-button">
+  <%= button_to 'Back to Discover', "/users/#{@user.id}/discover", method: :get %>
+</div>
+<br>
