--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,10 +2,10 @@
 <br>
 <%= button_to "Discover Movies", user_discover_index_path(@user), method: :get %>
 <h4>Viewing Parties</h4>
-<ul id='viewing-party-list'></ul>
+<ul id='viewing-party-list'>
 <% @parties.each do |party| %>
   <li id="party-<%=party.id%>">
-   
+    <%= image_tag "https://image.tmdb.org/t/p/w500/#{party.movie.image}" %>
     <p><b><%= party.movie.title %></b></p>
     <p><%= party.date %></p>
     <p><%= party.start_time %></p>
