--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -1,9 +1,8 @@
-<h3><%= @movie.title %></h3>
-<h3><%= @movie.vote_average %></h3>
-<h3><%= @movie.runtime %></h3>
-<h3><%= @movie.genres %></h3>
-<h3><%= @movie.summary %></h3>
-<h3><%= @movie.review_count %></h3>
+<h3>Title: <%= @movie.title %></h3>
+<h3>Vote Average: <%= @movie.vote_average %></h3>
+<h3>Movie Length: <%= @movie.runtime %></h3>
+<h3>Genres: <%= @movie.genres %></h3>
+<h3>Summary: <%= @movie.summary %></h3>
 <h4> Cast: </h4>
 <div id="cast">
 <% @movie.cast.each do |member| %>
@@ -13,10 +12,11 @@
 <% end %>
 </div>
 
+<h3>Number of reviews: <%= @movie.review_count %></h3>
 <h4> Reviews: </h4>
 <% @movie.reviews.each do |review| %>
 <div id="review_<%=review[:id]%>">
-<p> <%= review[:author]%> Review: <br> <%=review[:content]%> <p> <br> 
+  <p> Reviewer Name: <%= review[:author]%> <br> Review: <br> <%=review[:content]%> <p> <br> 
 </div>
 <%end%>
 
