Feat: add initial styling

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,60 @@
  *= require_tree .
  *= require_self
  */
+
+body {
+background-color: #222;
+color: white;
+font-family: Verdana, Geneva, Tahoma, sans-serif;
+padding: 10px;
+}
+
+header {
+  background-color: #333;
+  padding: 8px;
+}
+
+label, input, a {
+  margin: 8px 2px;
+  font-size: 18px;
+  padding: 8px;
+  background-color: rgb(91, 91, 91);
+  color: white;
+  border-radius: 5px;
+}
+
+a, button, input[type="submit"] {
+  display: inline-block;
+  color: white;
+  padding: 10px;
+  margin: 3px;
+  background-color: rgb(91, 91, 91);
+  border-radius: 5px;
+  text-decoration: none;
+  border-style: outset;
+}
+
+h1 {
+font-size: 40px;
+margin: 0px 0px 5px 0px;
+}
+
+h2 {
+font-size: 30px;
+margin: 10px;
+}
+
+h3 {
+margin: 5px 0px;
+font-size: 25px;
+}
+
+h1, h2, h3 {
+text-align: center;
+}
+
+main {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
