Refactor: add MovieData PORO and tests

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,9 @@
 
   <body>
     <%= render "shared/header" %>
-    <%= render "shared/messages" %>
-    <%= yield %>
+    <main>
+      <%= render "shared/messages" %>
+      <%= yield %>
+    </main>
   </body>
 </html>
