Feat: add #user_name for user movies to prevent method chaining in view

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,4 @@
-<h3><%= @facade.user.name %>'s Dashboard</h3>
+<h3><%= @facade.user_name %>'s Dashboard</h3>
 <%= form_with url: user_dashboard_discover_index_path(@facade.user), method: :get , local: true do |form| %>
   <%= form.submit 'Discover Movies' %>
 <% end %>
