--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -1,12 +1,12 @@
-<%= link_to "Discover Movies", user_dashboard_discover_index_path(@facade.user) %>
-<% if @facade.type == 'top rated' %>
+<%= link_to "Discover Movies", user_dashboard_discover_index_path(@user_movies.user) %>
+<% if @user_movies.type == 'top rated' %>
   <h3>Top Rated Movies</h3>
 <% else %>
-    <h3><%= @facade.type == 'search' %></h3>
+    <h3><%= @user_movies.type == 'search' %></h3>
 <% end %>
 <table>
   <tr><th>Title</th><th>Rating</th>
-  <% @facade.data.each do |movie| %>
+  <% @user_movies.movies.each do |movie| %>
     <tr>
       <td><%= movie.title %></td>
       <td><%= movie.rating %></td>
