--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -70,3 +70,20 @@ main {
   flex-direction: column;
   align-items: center;
 }
+
+.card-container {
+  display: flex;
+  flex-direction: row;
+}
+
+.card {
+  background-size: 100%;
+  width: 300px;
+  height: 450px;
+}
+
+.card h4 {
+  text-align: center;
+  font-size: 25px;
+  padding-top: 30px;
+}
